TaskManager/force-app/main/default/objects/Project__c/fields/Days_remaining__c.field-meta.xml
<CustomField>
    <fullName>Days_remaining__c</fullName>
    <formula>End_date__c  -   TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Remaining</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>