TaskManager/force-app/main/default/objects/Project__c/fields/Number_of_Tasks_Approved__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Tasks_Approved__c</fullName>
    <label>Number of Tasks Approved</label>
    <summaryFilterItems>
        <field>Assigned_task__c.Approval_status__c</field>
        <operation>equals</operation>
        <value>Approved</value>
    </summaryFilterItems>
    <summaryForeignKey>Assigned_task__c.Project__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>