TaskManager/force-app/main/default/objects/Project__c/fields/Number_of_Tasks_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Tasks_Assigned__c</fullName>
    <label>Number of Tasks Assigned</label>
    <summaryForeignKey>Assigned_task__c.Project__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>