TaskManager/force-app/main/default/objects/Project__c/fields/Number_of_Tasks_Completed__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Tasks_Completed__c</fullName>
    <label>Number of Tasks Completed</label>
    <summaryFilterItems>
        <field>Assigned_task__c.Task_status__c</field>
        <operation>equals</operation>
        <value>Completed</value>
    </summaryFilterItems>
    <summaryForeignKey>Assigned_task__c.Project__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>