TaskManager/force-app/main/default/objects/Project__c/fields/Project_status__c.field-meta.xml
<CustomField>
    <fullName>Project_status__c</fullName>
    <label>Project status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>to be started</fullName>
                <label>To be started</label>
            </value>
            <value>
                <fullName>in progress</fullName>
                <label>In progress</label>
            </value>
            <value>
                <fullName>completed</fullName>
                <label>Completed</label>
            </value>
            <value>
                <fullName>Overdue</fullName>
            </value>
            <value>
                <fullName>abandoned</fullName>
                <label>Abandoned</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>