TaskManager/force-app/main/default/objects/Project__c/fields/Total_Project_Days__c.field-meta.xml
<CustomField>
    <fullName>Total_Project_Days__c</fullName>
    <formula>End_date__c  -  Start_date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Project Days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>