TaskManager/force-app/main/default/objects/Project__c/validationRules/Validate_date.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_date</fullName>
    <active>true</active>
    <errorConditionFormula>Total_Project_Days__c    &lt;= 0</errorConditionFormula>
    <errorMessage>End date must exceed start date by at least one day.</errorMessage>
</ValidationRule>